# SprachUndBilderkennungProject

./: .gitignore  Sprach- und Bilderkennung Teile Lea.docx  blackandwhitedataset.py  cross_validation.py  custom_val.py  even_customer_validation.py  extendet_custom_val.py  live_predict.py  plot_loss.py  predict.py  pyproject.toml  tempCodeRunnerFile.py  train.py  train2.py  train_test_splitter.py  validation.py
datasets/Benjamin/: val.cache
datasets/Lea/: val.cache
datasets/LeaE/: val.cache
datasets/Max/: val.cache
datasets/MaxE/: val.cache
datasets/Nils/: val.cache
datasets/NilsE/: val.cache
datasets/V1/: test.cache  train.cache  val.cache
ecv/normal_val/: fold_1.txt  fold_2.txt  fold_3.txt  fold_4.txt  fold_5.txt
ecv/own_data_val/: benji_fold_1.txt  benji_fold_2.txt  benji_fold_3.txt  benji_fold_4.txt  benji_fold_5.txt  lea_fold_1.txt  lea_fold_2.txt  lea_fold_3.txt  lea_fold_4.txt  lea_fold_5.txt  max_fold_1.txt  max_fold_2.txt  max_fold_3.txt  max_fold_5.txt  nils_fold_1.txt  nils_fold_2.txt  nils_fold_3.txt  nils_fold_4.txt  nils_fold_5.txt
runs/classify/train/: args.yaml  results.csv
runs/classify/train10/: args.yaml
runs/classify/train100/: args.yaml  results.csv
runs/classify/train101/: args.yaml  results.csv
runs/classify/train102/: args.yaml  results.csv
runs/classify/train103/: args.yaml  results.csv
runs/classify/train104/: args.yaml  results.csv
runs/classify/train105/: args.yaml  results.csv
runs/classify/train106/: args.yaml  results.csv
runs/classify/train107/: args.yaml  results.csv
runs/classify/train11/: args.yaml
(+414 files in other folders)
