[tool.poetry]
name = "sprachundbilderkennungproject"
version = "0.1.0"
description = ""
authors = ["Nils Baxheinrich <nils@nbax.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ultralytics = "^8.2.28"
scikit-learn = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
